--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Edit.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Edit.razor
@@ -99,7 +99,7 @@
             };
             _entryCodeForDisplay = league.EntryCode;
             _seasonName = league.SeasonName; 
-            _isPastDeadline = league.EntryDeadline < DateTime.UtcNow;
+            _isPastDeadline = league.EntryDeadline < DateTime.Now;
             _isPriceLocked = league.MemberCount > 1;
         }
     }
