--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/PredictionGrid.razor
@@ -57,8 +57,15 @@
                                     }
                                 }
                                 else
-                                {
-                                    <span class="bi bi-clock-fill not-predicted-icon" title="No prediction submitted."></span>
+                                { 
+                                    @if (!player.HasPredicted && Deadline < DateTime.Now)
+                                    {
+                                        <span class="not-predicted-icon text-pl-red bi bi-x-circle-fill" title="No predictions submitted"></span>
+                                    }
+                                    else
+                                    {
+                                        <span class="bi bi-clock-fill not-predicted-icon" title="No prediction submitted."></span>
+                                    }
                                 }
                             </td>
                         }
@@ -81,6 +88,7 @@
 @code {
     [Parameter, EditorRequired] public List<PredictionResultDto>? Results { get; set; }
     [Parameter, EditorRequired] public List<MatchInRoundDto>? Matches { get; set; }
+    [Parameter, EditorRequired] public DateTime Deadline { get; set; }
 
     private bool IsWinner(PredictionResultDto player)
     {
