Disable Zoom on Double Tap

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/predictions.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/predictions.css
@@ -125,6 +125,7 @@
     line-height: 1;
     cursor: pointer;
     padding: 0.25rem 0.5rem;
+    touch-action: manipulation;
 }
 
     .stepper-btn:hover {
