Small Layout Changes

--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/Dashboard.razor
@@ -23,11 +23,11 @@
                         </div>
                         
                         <div class="row">
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 mb-4 mb-md-0">
                                 <MyLeaguesTile/>
                             </div>
 
-                            <div class="col-lg-6">
+                            <div class="col-lg-6 mb-4 mb-md-0">
                                 <AvailableLeaguesTile/>
                             </div>
                         </div>
