--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/layout/layout.css
@@ -48,6 +48,10 @@
     width: 30%;
 }
 
+.w-33 {
+    width: 33%;
+}
+
 .w-35 {
     width: 35%;
 }
@@ -66,6 +70,10 @@
 
 .w-60 {
     width: 60%;
+}
+
+.w-70 {
+    width: 70%;
 }
 
 .mh-600{
