--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Leagues/Dashboard/MobileMatchResultCard.razor
@@ -22,8 +22,8 @@
                 {
                     var prediction = player.Predictions.FirstOrDefault(p => p.MatchId == Match.Id);
                     <tr>
-                        <td class="w-35 text-start fw-bold">@player.PlayerName</td>
-                        <td class="w-30 text-center fw-bold">
+                        <td class="w-60 text-start fw-bold">@player.PlayerName</td>
+                        <td class="w-40 text-end fw-bold">
                             @if (prediction?.HomeScore != null)
                             {
                                 if (prediction.IsHidden)
@@ -47,7 +47,6 @@
                                 }
                             }
                         </td>
-                        <td class="w-35 text-end fw-bold">@(prediction?.PointsAwarded ?? 0)</td>
                     </tr>
                 }
             </tbody>
