--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/Pages/Dashboard/LeaderboardsTile.razor
@@ -2,6 +2,8 @@
 
 @implements IDisposable
 
+@inherits BaseLeaderboardComponent
+
 @using PredictionLeague.Web.Client.Services.Dashboard
 
 <div class="card h-100">
@@ -44,7 +46,7 @@
                                                 <tbody>
                                                     @foreach (var entry in leaderboard.Entries)
                                                     {
-                                                        <tr>
+                                                        <tr class="@(GetUserHighlightClass(entry.UserId)) test @entry.UserId">
                                                             <td class="rank-col fw-bold">@entry.Rank</td>
                                                             <td class="player-name-col fw-bold">@entry.PlayerName</td>
                                                             <td class="points-col fw-bold">@entry.TotalPoints</td>
@@ -83,6 +85,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        await base.OnInitializedAsync();
         DashboardState.OnStateChange += StateHasChanged;
         await DashboardState.LoadLeaderboardsAsync();
     }
