--- a/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/results-grid.css
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/wwwroot/css/pages/results-grid.css
@@ -128,7 +128,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.75rem;
 }
 
     .mobile-match-header .match-logo-small {
@@ -161,9 +161,10 @@
         border-bottom: none;
     }
 
-.mobile-prediction-points {
-    font-weight: bold;
-    text-align: right;
+.prediction-badge{
+    width: 65px;
+    max-width: 65px;
+    min-width: 65px;
 }
 
 @keyframes pulse {
