--- a/PredictionLeague.Web/PredictionLeague.Web.Client/Components/App.razor
+++ b/PredictionLeague.Web/PredictionLeague.Web.Client/Components/App.razor
@@ -3,6 +3,14 @@
 <Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
+            <Authorizing>
+                <div class="page-container text-white d-flex justify-content-center align-items-center" style="height: 100vh;">
+                    <div class="app-loading-container">
+                        <div class="spinner"></div>
+                        <p>Authorising...</p>
+                    </div>
+                </div>
+            </Authorizing>
             <NotAuthorized>
                 <RedirectToLogin />
             </NotAuthorized>
